# postal_codes

./: CLAUDE.md  README.md  column_aware_parser.py  fix_gmina_lookup.py  interactive_parser.py  iteractive.py  merged_output.csv  parse_postal_codes.py  pna_and_missing_rows.csv  polish_postal_parser_clean.ipynb  postal_codes_column_aware.csv  postal_codes_parser.ipynb  postal_codes_sample.csv  process_pdf_postal_codes.ipynb  pyproject.toml  simple_column_parser.py  test_postprocessing_df.csv
.claude/: settings.local.json
pdf_extraction_process/: process_pdf_postal_codes.ipynb  process_postal_codes.py
pdf_extraction_process/scripts/: check_missing_gmina.py  compare_csv_files.py
