[project]
name = "postal-codes"
version = "0.1.0"
description = ""
authors = [
    {name = "nizwant",email = "mateusznizwantowski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "camelot-py[base] (>=1.0.9,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.6"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
